Bug 1192122 - Safe mode startup, Part 1: check the power key state at startup r=mwu * * * Bug 1192122 - Safe mode startup, Part 2: shell.js hook